# RLHF-UI

./: .gitignore  README.md  pyproject.toml
preference_data/: preferences.csv
src/rlhf-ui/: __main__.py
src/rlhf_ui/: __init__.py  __main__.py  app.py  cli.py  config.py  main.py
src/rlhf_ui/data/: __init__.py  dataset.py  sampler.py  storage.py
src/rlhf_ui/models/: __init__.py  embedding.py  trainer.py
src/rlhf_ui/rlhf/: __init__.py  optimizer.py
src/rlhf_ui/ui/: __init__.py  app.py
src/rlhf_ui/ui/collectors/: preference.py
src/rlhf_ui/ui/components/: buttons.py  image_pair.py
src/rlhf_ui/ui/tabs/: __init__.py  base.py  inference.py  preference_collection.py  reward_model.py  rlhf_optimization.py
src/rlhf_ui/ui/trainers/: reward.py
src/rlhf_ui/ui/visualizers/: metrics.py
src/rlhf_ui/visualization/: __init__.py  dashboard.py  logger.py
